--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
     <script src="main.js" type="module" defer></script>
+    <style>
+        /* remove default page margin and prevent scrolling */
+        html, body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden;
+            background: #0b1220;
+        }
+        /* ensure Phaser canvas fills the viewport without creating scrollbars */
+        canvas {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <h1>Boss Fight Game</h1>
